z-index bugfix

--- a/ui/theme.css
+++ b/ui/theme.css
@@ -802,7 +802,6 @@ li.transitive {
   margin-right: auto;
   align-items: flex-start;
   position: relative;
-  z-index: -1;
   padding-left: 0;
 }
 
